-Added RecyclerViews of Rooms -Opening of Room Details from Recyclerviews

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_home"
-        android:title="Home"
-        android:icon="@drawable/ic_home"
+        android:title="Hotel"
+        android:icon="@drawable/ic_rooms"
         />
 
     <item
