--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#21a7ed</color>
+    <!--<color name="colorPrimary">#21a7ed</color>-->
+    <color name="colorPrimary">#362f2f</color>
     <color name="colorPrimaryDark">#0a5b85</color>
     <color name="colorPrimaryBackground">#0886c7</color>
     <color name="colorAccent">#375290</color>
