--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryBackground"
+    android:background="@drawable/home_screen"
     tools:context=".activities.LoginActivity">
 
     <TextView
@@ -67,11 +67,23 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="80dp"
         android:background="@color/colorPrimaryDark"
         android:text="Log In"
         android:textAllCaps="false"
         android:textColor="@color/colorFormBackground" />
+
+    <TextView
+        android:id="@+id/ButtonBrowseNow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Browse Now >"
+        style="@style/Base.TextAppearance.AppCompat.Title"
+        android:layout_marginBottom="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="#f1d26c"/>
 
 </RelativeLayout>
